Source/WebKit/UIProcess/API/gtk/PageClientImpl.h
@@ -94,6 +94,9 @@ private:
 #if ENABLE(INPUT_TYPE_COLOR)
     RefPtr<WebColorPicker> createColorPicker(WebPageProxy*, const WebCore::Color& initialColor, const WebCore::IntRect&, Vector<WebCore::Color>&&) override;
 #endif
+#if ENABLE(DATALIST_ELEMENT)
+    RefPtr<WebDataListSuggestionsDropdown> createDataListSuggestionsDropdown(WebPageProxy&) override;
+#endif
     void selectionDidChange() override;
     RefPtr<ViewSnapshot> takeViewSnapshot() override;
 #if ENABLE(DRAG_SUPPORT)
