Tools/WebKitTestRunner/gtk/UIScriptControllerGtk.cpp
@@ -29,6 +29,7 @@
 #include "PlatformWebView.h"
 #include "TestController.h"
 #include <WebKit/WKViewPrivate.h>
+#include <gtk/gtk.h>
 
 namespace WTR {
 
@@ -49,6 +50,14 @@ void UIScriptControllerGtk::completeBackSwipe(JSValueRef callback)
     auto* webView = TestController::singleton().mainWebView()->platformView();
 
     WKViewCompleteBackSwipeForTesting(webView);
+}
+
+bool UIScriptControllerGtk::isShowingDataListSuggestions() const
+{
+    auto* webView = TestController::singleton().mainWebView()->platformView();
+    if (auto* popup = g_object_get_data(G_OBJECT(webView), "wk-datalist-popup"))
+        return gtk_widget_get_mapped(GTK_WIDGET(popup));
+    return false;
 }
 
 } // namespace WTR
